include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL void Reactors_Set_Z(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Set_Z0(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_idx(void);
    ALTDSS_CAPI_DLL void Reactors_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* Reactors_Get_Pointer(void);