src/CAPI/CAPI_Reactors.pas


    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.Z1), ValuePtr, ValueCount, []);
        Exit;
    end;
    pReactor.Z1 := Cmplx(Value[0], Value[1]);
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Z0(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray0(ValuePtr);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    
    if (ValueCount <> 2) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, 2], 5024);
        end;
        Exit;
    end;
    
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.Z0), ValuePtr, ValueCount, []);
        Exit;
    end;
    pReactor.Z0 := Cmplx(Value[0], Value[1]);
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Z(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray0(ValuePtr);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    
    if (ValueCount <> 2) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, 2], 5024);
        end;
        Exit;
    end;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.Z), ValuePtr, ValueCount, []);
        Exit;
    end;
    pReactor.Z := Cmplx(Value[0], Value[1]);
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
function Reactors_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.Reactors.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_idx(Value: Integer); CDECL;
var
    pReactor: TReactorObj;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    pReactor := DSSPrime.ActiveCircuit.Reactors.Get(Value);
    if pReactor = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['Reactor', Value], 656565);
        Exit;
    end;
    DSSPrime.ActiveCircuit.SetActiveCktElement(pReactor);
end;
//------------------------------------------------------------------------------
function Reactors_Get_Pointer(): Pointer; CDECL;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.Reactors.Active
end;
//------------------------------------------------------------------------------
end.
